add custom domain

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "new-portfolio",
-  "homepage": "https://victhall.github.io/new-portfolio",
+  "homepage": "https://victoriahall.dev",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
